--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,21 @@
-# System files
-.DS_Store
-Thumbs.db
-
-# Editor directories and files
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
-
-# Dependency directories
+# Dependencies
 node_modules/
-vendor/
 
-# Build outputs
-dist/
-build/
-*.log
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
 # Environment variables
 .env
 .env.local
+
+# Logs
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+.vercel
