--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "franciscancatholicschool",
+  "name": "franciscan-catholic-school",
   "version": "1.0.0",
-  "private": true,
+  "description": "Franciscan Catholic School Management System",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "nodemailer": "^6.9.14",
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "sqlite3": "^5.1.6",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
