--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,14 @@
     {
       "source": "/",
       "destination": "/index.html"
+    },
+    {
+      "source": "/api/login",
+      "destination": "/api/login.js"
+    },
+    {
+      "source": "/api/change-password",
+      "destination": "/api/change-password.js"
     }
   ]
 }
