added teachers into the database

--- a/vercel.json
+++ b/vercel.json
@@ -32,6 +32,10 @@
     {
       "source": "/api/change-password",
       "destination": "/api/change-password.js"
+    },
+    {
+      "source": "/api/teachers",
+      "destination": "/api/teachers.js"
     }
   ]
 }
